<resources>
    <string name="app_name">Learn and Practice</string>
    <string name="learn_amp_practise_n_java"><![CDATA[Learn & Practise\n Java]]></string>
    <string name="learn">Learn</string>
    <string name="practice">Practice</string>
    <string name="contribute">Contribute</string>
    <string name="a_project_by_tt_learn">A Project by TT-Learn</string>
    <string name="q">Q:</string>
    <string name="contribute_the_question">Contribute the Question</string>
    <string name="option_a">Option A:</string>
    <string name="option_b">Option B:</string>
    <string name="option_c">Option C:</string>
    <string name="Answer">Answer:</string>
    <string name="introduction">Introduction</string>
    <string name="basics">Basics</string>
    <string name="oop">OOP</string>
    <string name="arrays">Arrays</string>
    <string name="loops">Loops</string>
    <string name="title">Title</string>
    <string name="text">text</string>
    <string name="back_to_home">Back to Home</string>
    <string name="back_to_Main">Back to Main</string>
    <string name="option_c_C">Option C</string>

</resources>