<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#EDBC0A"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:backgroundTint="#951212"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="center"

                android:text="Topics"
                android:textColor="#01043A"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/intro"
                android:layout_width="321dp"
                android:layout_height="78dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/introduction"
                android:textSize="24sp" />

            <Button
                android:id="@+id/basics"
                android:layout_width="321dp"
                android:layout_height="78dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/basics"
                android:textSize="24sp" />

            <Button
                android:id="@+id/loops"
                android:layout_width="321dp"
                android:layout_height="78dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/loops"
                android:textSize="24sp" />

            <Button
                android:id="@+id/arrays"
                android:layout_width="321dp"
                android:layout_height="78dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/arrays"
                android:textSize="24sp" />

            <Button
                android:id="@+id/oop"
                android:layout_width="321dp"
                android:layout_height="78dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/oop"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>