<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#EDBC0A"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/contribute"
        android:layout_width="288dp"
        android:layout_height="61dp"
        android:layout_marginBottom="40dp"
        android:text="@string/contribute"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="365dp"
        android:layout_height="81dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#951212"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"

        android:text="@string/contribute_the_question"
        android:textColor="#01043A"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/question"
        android:padding="5dp"
        android:layout_width="190dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:background="#FFFFFF"
        android:backgroundTint="#80FBFBFB"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question2" />

          <EditText  android:padding="5dp"
        android:id="@+id/question3"
        android:layout_width="190dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:backgroundTint="#80FBFBFB"
        android:editable="true"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question5" />

          <EditText  android:padding="5dp"
        android:editable="true"
        android:id="@+id/question5"
        android:layout_width="190dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:background="#FFFFFF"
        android:backgroundTint="#80FBFBFB"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

          <EditText  android:padding="5dp"
        android:editable="true"
        android:id="@+id/question6"
        android:layout_width="190dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:backgroundTint="#80FBFBFB"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question3" />


          <EditText  android:padding="5dp"
        android:id="@+id/question2"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:editable="true"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:backgroundTint="#80FBFBFB"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:text="@string/q"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="135dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:text="@string/option_a"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="135dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:text="@string/option_c"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="135dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:text="@string/Answer"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="135dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:text="@string/option_b"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534" />


    >
</androidx.constraintlayout.widget.ConstraintLayout>